--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -54,6 +54,12 @@ body {
   &--tomb {
     background-image: url('/img/tomb.png');
   }
+
+  &--robot {
+    background-image: url('/img/robot.png');
+  }
+
+
 }
 
 .pacboy {
